# rts-m2-rust

./: .env  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: manual.rust.yml  rust.yml
rts-core/: Cargo.toml
rts-core/src/: exceptions.rs  hooks.rs  lib.rs
rts-core/src/components/: building.rs  displayer.rs  game.rs  mod.rs  play_ground.rs  playground.rs  turn_strategy.rs  unit_factory.rs  units_holder.rs  units_shop.rs
rts-core/src/entity/: game_actions.rs  mod.rs  player.rs  skill.rs  unit.rs
rts-front/: Cargo.toml  index.html
rts-front/src/: contexts.rs  main.rs  routes.rs  utils.rs
rts-front/src/screens/: ai_upload.rs  home_screen.rs  leaderboard.rs  login.rs  mod.rs  page_not_found.rs  register.rs
rts-server/: Cargo.toml  create_table.sql
rts-server/migrations/2022-02-04-121933_create_users/: up.sql
rts-server/migrations/2022-02-04-122220_create_ais/: down.sql  up.sql
rts-server/migrations/2022-03-05-121711_create_leader_board/: down.sql  up.sql
rts-server/src/: dto.rs  exceptions.rs  main.rs  models.rs  schema.rs
rts-server/src/controllers/: ai_controller.rs  leader_board_controller.rs  mod.rs  user_controller.rs
rts-server/src/repositories/: ai_repo.rs  leader_repo.rs  mod.rs  user_repo.rs
rts-server/static/: index.html
