[package]
name = "rts-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rts-core = { path = "../rts-core" }
futures = "0.3"
tokio = { version = "1.16.1", features = ["full"] } # @TODO remove
actix-web = "3"
actix-files = "0.3"
actix = "0.10"
actix-web-actors = "3"
env_logger = "0.8"
serde = "1"
serde_json = "1"
diesel = { version = "1.4.4", features = ["postgres", "r2d2",] }
dotenv = "0.15.0"
r2d2 = "0.8.9"
time = "0.2"

# Password hashing and encryption
rust-argon2 = "1.0"
rand = { version = "0.8.4", features = ["getrandom", ]}

# Token conversion
base64 = "0.9.3"
