[package]
name = "rts-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rts-core = { path = "../rts-core" }
tokio = { version = "1.17", features = ["full"] } # @TODO remove
actix-web = { version = "4.0", features = ["cookies"] }
cookie = "0.16"
actix-files = "0.6"
env_logger = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
diesel = { version = "1.4", features = ["postgres", "r2d2",] }
dotenv = "0.15"
r2d2 = "0.8"

# Password hashing and encryption
rust-argon2 = "1.0"
rand = { version = "0.8", features = ["getrandom", ]}

# Token conversion
base64 = "0.13"

# AI fetching
reqwest = "0.11"
